--- a/Index.html
+++ b/Index.html
@@ -27,9 +27,92 @@
 				<div class="posicionOjoaIz ojo">
 					<div class="brillo"></div>
 				</div>
-				<div class="BocaCuadro"></div>
+				<div class="BocaCuadro">
+				<div class="BocaIzquierdo"></div>
+				<div class="BocaDerecho"></div>
+			</div>
+			<div class="pata1 mmpatas"></div>
+			<div class="pata2 mmpatas"></div>
+			<div class="pata3 mmpatas"></div>
+			<div class="pata4 mmpatas"></div>
+			<div class="arco color1"></div>
+			<div class="arco color2"></div>
+			<div class="arco color3"></div>
+			<div class="arco color4"></div>
+			<div class="arco color5"></div>
+			<div class="arco color6"></div>
+			<div class="arco2 color1"></div>
+			<div class="arco2 color2"></div>
+			<div class="arco2 color3"></div>
+			<div class="arco2 color4"></div>
+			<div class="arco2 color5"></div>
+			<div class="arco2 color6"></div>
+			<div class="arco3 color1"></div>
+			<div class="arco3 color2"></div>
+			<div class="arco3 color3"></div>
+			<div class="arco3 color4"></div>
+			<div class="arco3 color5"></div>
+			<div class="arco3 color6"></div>
+			<div class="arco4 color1"></div>
+			<div class="arco4 color2"></div>
+			<div class="arco4 color3"></div>
+			<div class="arco4 color4"></div>
+			<div class="arco4 color5"></div>
+			<div class="arco4 color6"></div>
+				<div class="cola"></div>
+				<div class="cola2"></div>
+				<div class="cola3"></div>
+				<div class="colagris"></div>
+				<div class="cola2gris"></div>
+				<div class="cola3gris"></div>
+				<div class="nariz"></div>
+				<div class="cacheteIzquierdo"></div>
+					<div class="cacheteDerecho"></div>
+					<div class="rectanguloH posicion1"></div>
+						<div class="rectanguloH posicion2"></div>
+						<div class="rectanguloV posicion3"></div>
+						<div class="rectanguloV posicion4"></div>
+						<div class="circulo posicionCirculo"></div>
+						<div class="circulo posicionCirculo2"></div>
+						<div class="cubito posicionCubito"></div>
+						<div class="cubito posicionCubito2"></div>
+						<div class="rectanguloH posicion5"></div>
+						<div class="rectanguloH posicion6"></div>
+						<div class="rectanguloV posicion7"></div>
+						<div class="rectanguloV posicion8"></div>
+						<div class="cubito posicionCubito3"></div>
+						<div class="cubito posicionCubito4"></div>
+						<div class="rectanguloH posicion9"></div>
+						<div class="rectanguloH posicion10"></div>
+						<div class="rectanguloV posicion11"></div>
+						<div class="rectanguloV posicion12"></div>
+						<div class="cubito posicionCubito5"></div>
+						<div class="cubito posicionCubito7"></div>
+						<div class="cubito posicionCubito8"></div>
+						<div class="cubito posicionCubito9"></div>
+						<div class="cubito posicionCubito10"></div>
+						<div class="cubito posicionCubito11"></div>
+						<div class="cubito posicionCubito12"></div>
+						<div class="cubito posicionCubito13"></div>
+								<div class=" cubito posicionCubito14"></div>
+								<div class=" cubito posicionCubito15"></div>
+								<div class=" cubito posicionCubito16"></div>
+								<div class="cubito posicionCubito17"></div>
+										<div class=" cubito posicionCubito18"></div>
+										<div class=" cubito posicionCubito19"></div>
+										<div class=" cubito posicionCubito20"></div>
+										<div class="cubito posicionCubito21"></div>
+												<div class=" cubito posicionCubito22"></div>
+												<div class=" cubito posicionCubito23"></div>
+												<div class=" cubito posicionCubito24"></div>
+												<div class=" cubito posicionCubito25"></div>
+
+
 			</div>
 		</div>
 	</div>
+
+
+
 </body>
 </html>
